# skua

./: README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
conda-recipe/: meta.yaml
src/skua/: __init__.py  cli.py  core.py  evidence.py  stats.py  variants.py
tests/: test_cli.py  test_core.py  test_evidence_aggregation.py  test_evidence_alignment_fetch.py  test_evidence_pysam_integration.py  test_evidence_snv_classifier.py  test_stats.py  test_variants.py
tools/: set_version.py
