[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skua"
version = "0.1.1"
description = "Predatory and kleptoparasitic variant caller for detecting subclonal mutations in deep sequencing data"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Michael Knudsen", email = "micknudsen@gmail.com"}]
license = {text = "MIT"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bioinformatics",
]
dependencies = [
  "pysam>=0.22",
]

[project.scripts]
skua = "skua.cli:main"

[project.optional-dependencies]
dev = [
  "pysam>=0.22",
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
